javaのjdk9以降で提供されるモジュールシステムに対応させた。