@@ -6,6 +6,11 @@ The simulation tool for STAMP/STPA
 
 ## 履歴
 
+2020/04/11 jdk9以降で導入されたモジュールシステム化を実施する。
+           実行ファイルは、JavaVMを含めたものを生成し、OSにインストールされたJavaVMと関係なく動作するようにした。
+           ただし、/styles/Styles.cssが読み込めない現象が発生するため、「結果表」の逸脱しているセルの色替えが
+           行われない。
+
 2019/10/21 5値論理を用いる説明用の事例を追加。
 
 2019/10/14 取説に5値論理等の扱いに関する説明を追加する。
@@ -37,18 +42,32 @@ The simulation tool for STAMP/STPA
 
 本リポジトリ下の「documents」以下を参照ください。
 
-## jdk11以降による起動方法
+## 起動方法
 
-jdk11以降は、javaFXライブラリが同胞されてないので、別途、javaFXライブラリ（使用OSに該当するSDKライブラリ）を以下からダウンロードし、ライブラリを指定して起動してください。
-
-https://gluonhq.com/products/javafx/
-
-java --module-path AAA/javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml  -cp sim4stamp-1.0.jar tmu.fs.sim4stamp.MainApp
-
-ここで「AAA」はjavaFXのライブラリのルートパスを示します。実行環境に合わせて設定してください。
-
+   bin下にある「sim4stampzip-X.X.X.zip」をダウンロードし、任意のフォルダに解凍します。
+   解凍したフォルダの「bin/sim4stamp」をクリックすると画面が表示されます。
+   なお、本処理については専用のJavaVMが内蔵されていますが、Overtureについては、Overtureで指定
+   するJavaをインストールしておく必要があります。
 
 ## ライセンス
 
 ソースコードのライセンスはGPL-v3です。
+
+## Mavenによるビルド方法
+
+（１）コンパイル/実行ファイル（jar）生成
+
+          mvn clean package
+
+（２）JavaVMイメージ生成
+
+          mvn javafx:jlink
+
+（３）実行
+
+          mvn javafx:run
+
+         または
+
+          mvn javafx:run
 
